# dots

./: .gitignore  Brewfile  Dockerfile  Makefile  README.adoc  README.md  Rakefile  alacritty.yml  bootstrap.sh  compose.yaml  docker-compose.yml  favcmd  gitconfig  gitignore  ignore  makefile  memorize  ripgreprc  tmux.conf  tmux.sh  vimrc  vimrc.lua  vimrc.minimal  zshrc
asdf/: Makefile  tool-versions
brew/: core.Brewfile  dev.Brewfile  extra.Brewfile
chiz/: chiz  chiz.rb
docker/: Dockerfile  entrypoint.sh
docs/: index.html  install.sh
emacs/: init.el
iterm2/: com.googlecode.iterm2.plist
prompts/: AGENTS.md  agents-team.md  statusline.sh
prompts/skills/pdf-tools/: .gitignore  REFERENCE.md  SKILL.md  pyproject.toml
prompts/skills/pdf-tools/pdf_tools/: __init__.py  convert_pdf_to_md.py
rakelib/: github_release.rb
ruby/: cmd.rb  ext_string.rb  mylib.rb
script/: mise.compose.yaml  rds-stats
snips/: aws.snippets  aws.snips  blockchain.snippets  bookmark.snips  clojure.snippets  confini.snips  crontab.snips  css.snips  deno.snips  devops.snips  docker.snips  docker_compose.snippets  docker_compose.snips  dockerfile.snippets  dockerfile.snips  editorconfig.snips  elasticsearch.snips  elixir.snips  fzf.snips  gitcommit.snippets  gitcommit.snips  github_action.snips  github_workflow.snippets  github_workflow.snips  gitignore.snips  gnuplot.snips  helm.snippets  helm.snips  html.snips  javascript.snips  jq.snips  just.snips  kamal.snips  kube.snippets  kube.snips  kubectl.snips  lua.snips  make.snippets  make.snips  markdown.snips  (+48 more)
tools/: tasks
(+1016 files in other folders)
