[project]
name = "pdf-tools"
version = "0.1.0"
description = "PDF to Markdown converter with table and image extraction support"
requires-python = ">=3.11"
dependencies = [
    "camelot-py[cv]>=1.0.9",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.7",
    "pymupdf>=1.26.5",
    "pymupdf4llm>=0.0.27",
]

[project.scripts]
convert = "pdf_tools.convert_pdf_to_md:main"

[tool.uv]
package = true
